--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -16,9 +16,10 @@
     - [4.2.2. 从pc.ram中划分并加入system_memory的subregion](#422-从pcram中划分并加入system_memory的subregion)
       - [4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存](#4221-memory_region_init_alias-初始化alias的mr-不申请内存)
       - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory(不是pc.ram)](#4222-memory_region_add_subregion-subregion注册到全局的system_memory不是pcram)
-      - [3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互](#311-address_space_update_topology-设置拓扑flatview-会与kvm交互)
-        - [3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#3111-generate_memory_topologymr-根据给定的mr生成新的flatview)
-        - [3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#3112-address_space_set_flatview-设置as的flatview-会调用kvm)
+  - [提交修改: memory_region_transaction_commit()](#提交修改-memory_region_transaction_commit)
+    - [3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互](#311-address_space_update_topology-设置拓扑flatview-会与kvm交互)
+      - [3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#3111-generate_memory_topologymr-根据给定的mr生成新的flatview)
+      - [3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#3112-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
 - [6. 参考](#6-参考)
 
@@ -665,6 +666,8 @@ done:
 
 目前我们添加了区域，**地址空间已经发生变化**，自然要把变化和KVM进行同步，这一工作由`memory_region_transaction_commit()`实现。
 
+## 提交修改: memory_region_transaction_commit()
+
 ```cpp
 void memory_region_transaction_commit(void)
 {
@@ -689,7 +692,7 @@ void memory_region_transaction_commit(void)
 
 对于**每个address_space！！！**，调用`address_space_update_topology()`执行更新。
 
-#### 3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互
+### 3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互
 
 这个在`address_space_init()`时候也会调用
 
@@ -712,7 +715,7 @@ static void address_space_update_topology(AddressSpace *as)
 
 前者对于**一个给定的MR**，生成其**对应的FlatView**，而后者则根据**oldview**和**newview**对当前视图进行更新。
 
-##### 3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview
+#### 3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview
 
 ```cpp
 /* Render a memory topology into a list of disjoint absolute ranges. */
@@ -926,7 +929,7 @@ for循环中处理的就是图中的1, 2, 4.
 
 695 - 698 行 重合的部分跳过,重合的部分生成FlatRange, 最后剩下的部分为现有FlatRange都不包含的部分, 则在 699-703 生成新的FlatRange插入
 
-##### 3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM
+#### 3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM
 
 ```cpp
 static void address_space_set_flatview(AddressSpace *as)
