--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -694,7 +694,7 @@ void memory_region_transaction_commit(void)
 
 ### 3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互
 
-这个在`address_space_init()`时候也会调用
+这个在`address_space_init()`时候也会调用, 当`address_space_memory`调用时, mr就是`system_memory`
 
 ```cpp
 static void address_space_update_topology(AddressSpace *as)
@@ -766,16 +766,6 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
     return view;
 }
 ```
-
-qemu要把**MemoryRegion**映射到cpu看到的**线性地址上**(**AddressSpace**), 但是有些情况**两个设备**的内存映射到**相同的线性地址**, 比如mmio. 举个例子,对于一个**内存条是4g**, 它的线性地址为**0-4g**, 但是**vga设备**的内存地址通过**mmio映射**到**线性地址**的`768k–(768+256k)`, 这种情况应该使vga的线性地址覆盖掉ram的`768k–(768+256k)`地址,这样写vga地址才能成功.
-
-**FlatRang**则表示一个MemoryRegion映射到线性空间的一段地址.
-
-qemu内存建模是通过**优先级**来实现**内存地址的覆盖**, 优先级高的MemoryRegion 先被转换为 **FlatRang**, 后面渲染的时候**低优先级**的FlatRang**不覆盖高优先级**的FlatRang, **低优先级**的**FlatRang**如果被**高优先级**的FlatRang**截断**则**只保存**不被高优先级遮盖的部分到flatview, 这是`render_memory_region` 的677行到704行的主要工作
-
-MemoryRegion 的terminates 变量如果为false表示它是一个**纯容器**, 纯容器自身**没有线性地址**(只规定一个偏移和大小来限制子区域线性地址的取值), 通过子region来生成线性地址, 所以纯容器所规定的线性地址空间可能留下空洞,会被其他低优先级的MemoryRegion所填充MemoryRegion的addr 变量表示相对于父容器的偏移, 和大小,FlatRange的offset_in_region 变量表示该FlatRange相对所在MemoryRegion的位置(因为一个MemoryRegion可能被高优先级的MemoryRegion截断成多段,所以offset_in_region不一定为0)
-
-fr.addr 标示该FlatRange在线性地址空间的偏移
 
 调用`render_memory_region()`:
 
@@ -907,7 +897,18 @@ static void render_memory_region(FlatView *view,
 }
 ```
 
-FlatRange在FlatView中是按照地址升序来排列的,另外不存在地址重合的FlatRange.
+qemu要把**MemoryRegion**映射到cpu看到的**线性地址上**(**AddressSpace**), 但是有些情况**两个设备**的内存映射到**相同的线性地址**, 比如mmio. 举个例子,对于一个**内存条是4g**, 它的线性地址为**0-4g**, 但是**vga设备**的内存地址通过**mmio映射**到**线性地址**的`768k–(768+256k)`, 这种情况应该使vga的线性地址覆盖掉ram的`768k–(768+256k)`地址,这样写vga地址才能成功.
+
+**FlatRang**则表示一个MemoryRegion映射到线性空间的一段地址.
+
+qemu内存建模是通过**优先级**来实现**内存地址的覆盖**, 优先级高的MemoryRegion 先被转换为 **FlatRang**, 后面渲染的时候**低优先级**的FlatRang**不覆盖高优先级**的FlatRang, **低优先级**的**FlatRang**如果被**高优先级**的FlatRang**截断**则**只保存**不被高优先级遮盖的部分到flatview, 这是`render_memory_region` 的677行到704行的主要工作
+
+MemoryRegion 的terminates 变量如果为false表示它是一个**纯容器**, 纯容器自身**没有线性地址**(只规定一个偏移和大小来限制子区域线性地址的取值), 通过子region来生成线性地址, 所以纯容器所规定的线性地址空间可能留下空洞,会被其他低优先级的MemoryRegion所填充MemoryRegion的addr 变量表示相对于父容器的偏移, 和大小,FlatRange的offset_in_region 变量表示该FlatRange相对所在MemoryRegion的位置(因为一个MemoryRegion可能被高优先级的MemoryRegion截断成多段,所以offset_in_region不一定为0)
+
+fr.addr 标示该FlatRange在线性地址空间的偏移
+
+
+FlatRange在FlatView中是按照地址升序来排列的, 另外不存在地址重合的FlatRange.
 
 后面把结束地址小于MemoryRegion开始地址的FlatRange都排除掉,因为他们的地址和我们要生成的地址有冲突
 
@@ -987,11 +988,7 @@ static void address_space_set_flatview(AddressSpace *as)
 }
 ```
 
-在获取了**新旧两个FlatView**之后，调用了**两次**`address_space_update_topology_pass()`函数，首次调用重在**删除原来的**，而后者重在**添加**。
-
-之后设置`as->current_map = new_view`。
-
-并对`old_view`**减少引用**，当**引用计数为1**时会**被删除**。
+在获取了**新旧两个FlatView**之后，调用了**两次**`address_space_update_topology_pass()`函数，首次调用重在**删除原来的**，而后者重在**添加**。之后设置`as->current_map = new_view`。并对`old_view`**减少引用**，当**引用计数为1**时会**被删除**。
 
 接下来重点在两个地方：1、如何根据一个MR获取对应的FlatView；2、如何对旧的FlatView进行更新。
 
