--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -812,14 +812,18 @@ static void render_memory_region(FlatView *view,
     readonly |= mr->readonly;
     nonvolatile |= mr->nonvolatile;
     // 返回base以及大小即start&size, {0, 2^64}
+    // 当前mr的地址空间范围
     tmp = addrrange_make(base, mr->size);
     //计算结果true因此不执行这里。继续向下执行
+    // 判断目标MR与clip是否有交叉, 即MR应该落在clip的范围内
     if (!addrrange_intersects(tmp, clip)) {
         return;
     }
+    // 缩小clip到交叉的部分
     //结果为start=0，size=0xffffffffffffffffui64
     clip = addrrange_intersection(tmp, clip);
     //对别名空间进行渲染
+    // 子区域才有alias
     if (mr->alias) {
         int128_subfrom(&base, int128_make64(mr->alias->addr));
         int128_subfrom(&base, int128_make64(mr->alias_offset));
@@ -839,8 +843,10 @@ static void render_memory_region(FlatView *view,
         return;
     }
     //计算Mr在线性空间的大小和偏移, 返回结果为0
+    // clip.start表示地址区间的起始, base为本次映射的基址, 差值就是offset
     offset_in_region = int128_get64(int128_sub(clip.start, base));
-    // 为0
+    // 最初base为0
+    // 开始映射时, clip表示映射的区间范围, base作为一个移动指导每个FR的映射, remain表示clip还没映射的大小
     base = clip.start;
     // 为0xffffffffffffffffui64
     remain = clip.size;
@@ -858,11 +864,14 @@ static void render_memory_region(FlatView *view,
             continue;
         }
         // FlatRange开始地址大于mr开始地址
+        /*如果base < = view->ranges[i].addr.start*/
         if (int128_lt(base, view->ranges[i].addr.start)) {
+            /*now 表示已经存在的FR 或者本次填充的FR的长度*/
             //找出两个中小的赋值给now, min(remain, flatrange.start - base)
             now = int128_min(remain,
                              int128_sub(view->ranges[i].addr.start, base));
             // flatrange在mr中的偏移, 第一次是0
+            /*fr.offset_in_region表示在整个地址空间中的偏移*/
             fr.offset_in_region = offset_in_region;
             //完成fr的addrfange的赋值, base到min(remin, start)
             fr.addr = addrrange_make(base, now);
@@ -888,6 +897,7 @@ static void render_memory_region(FlatView *view,
         int128_subfrom(&remain, now);
     }
     // remain != 0
+    /*如果还有剩下的clip没有映射，则下面不会在发生冲突，直接一次性的映射完成*/
     if (int128_nz(remain)) {
         fr.offset_in_region = offset_in_region;
         // 返回AddressRange{base, remain}
@@ -896,6 +906,12 @@ static void render_memory_region(FlatView *view,
     }
 }
 ```
+
+在此必须清楚MR和clip的意义，即该函数实现的是把**MR的区域**填充**clip空间**。填充的方式就是**生成一个个FlatRange**，并交由FlatView管理。基本管理逻辑理论上如图所示
+
+![2020-02-28-23-26-43.png](./images/2020-02-28-23-26-43.png)
+
+棕色部分意味着已经存在的映射，这种情况下只需要把R1和R2映射进来即可。最终FlatView中的FlatRange按照在物理地址空间的布局，依次排列。但是按照实际情况来讲，实际上传递进来的MR是整个地址空间system_space,所以像图中那样比较复杂的格局应该基本不会出现。不过咱们还是根据代码来看。首先获取了当前MR的区间范围，以base为起点。我们目的是要把MR的区间映射进clip中，所以如果两者没有交叉，那么无法完成映射。接着设置clip为二者地址区间重叠的部分，以图中所示，clip就成了clip1所标的范围。如果当前MR是某个subregion,则需要对其原始的MR进行展开，因为具体的信息都保存在原始的MR中。但是全局MR system_memory作为参数传递进来，那么这里mr->alias为NULL，所以到了下面对system_memory的每个subregion均进行展开。就这样再次进入render_memory_region函数的时候，MR为某个subregion，clip也为subregion对应的区域和原始clip的交集，由于其mr->alias指向原始MR，进入if判断，对原始MR的对应区间进行展开，再次调用render_memory_region。这一次就要进行真正的展开操作了，即生成对应的FlatRange。
 
 qemu要把**MemoryRegion**映射到cpu看到的**线性地址上**(**AddressSpace**), 但是有些情况**两个设备**的内存映射到**相同的线性地址**, 比如mmio. 举个例子,对于一个**内存条是4g**, 它的线性地址为**0-4g**, 但是**vga设备**的内存地址通过**mmio映射**到**线性地址**的`768k–(768+256k)`, 这种情况应该使vga的线性地址覆盖掉ram的`768k–(768+256k)`地址,这样写vga地址才能成功.
 
@@ -906,7 +922,6 @@ qemu内存建模是通过**优先级**来实现**内存地址的覆盖**, 优先
 MemoryRegion 的terminates 变量如果为false表示它是一个**纯容器**, 纯容器自身**没有线性地址**(只规定一个偏移和大小来限制子区域线性地址的取值), 通过子region来生成线性地址, 所以纯容器所规定的线性地址空间可能留下空洞,会被其他低优先级的MemoryRegion所填充MemoryRegion的addr 变量表示相对于父容器的偏移, 和大小,FlatRange的offset_in_region 变量表示该FlatRange相对所在MemoryRegion的位置(因为一个MemoryRegion可能被高优先级的MemoryRegion截断成多段,所以offset_in_region不一定为0)
 
 fr.addr 标示该FlatRange在线性地址空间的偏移
-
 
 FlatRange在FlatView中是按照地址升序来排列的, 另外不存在地址重合的FlatRange.
 
@@ -926,9 +941,6 @@ for循环中处理的就是图中的1, 2, 4.
 
 将剩余部分地址裁剪出来, 其实还有一部分FlatRange可能要生成新的FlatRange(end到remin)
 
-692-697 行主要把要生成的地址和现有的地址重合部分跳过
-
-695 - 698 行 重合的部分跳过,重合的部分生成FlatRange, 最后剩下的部分为现有FlatRange都不包含的部分, 则在 699-703 生成新的FlatRange插入
 
 #### 3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM
 
@@ -1000,160 +1012,8 @@ static void address_space_set_flatview(AddressSpace *as)
 
 
 
-```cpp
-static void address_space_update_topology(AddressSpace *as)
-{
-    FlatView *old_view = address_space_get_flatview(as);
-    /*根据AddressSpace对应的MR生成一个新的FlatView*/
-    FlatView *new_view = generate_memory_topology(as->root);
 
-    address_space_update_topology_pass(as, old_view, new_view, false);
-    address_space_update_topology_pass(as, old_view, new_view, true);
 
-    qemu_mutex_lock(&flat_view_mutex);
-    flatview_unref(as->current_map);
-    /*设置新的FlatView*/
-    as->current_map = new_view;
-    qemu_mutex_unlock(&flat_view_mutex);
-
-    /* Note that all the old MemoryRegions are still alive up to this
-     * point.  This relieves most MemoryListeners from the need to
-     * ref/unref the MemoryRegions they get---unless they use them
-     * outside the iothread mutex, in which case precise reference
-     * counting is necessary.
-     */
-    flatview_unref(old_view);
-
-    address_space_update_ioeventfds(as);
-}
-```
-
-在获取了新旧两个FlatView之后，调用了两次address_space_update_topology_pass()函数，首次调用重在删除原来的，而后者重在添加。之后设置as->current_map = new_view。并对old_view减少引用，当引用计数为1时会被删除。接下来重点在两个地方：1、如何根据一个MR获取对应的FlatView；2、如何对旧的FlatView进行更新。
-
-前者自然少不了分析generate_memory_topology函数
-
-```cpp
-tatic FlatView *generate_memory_topology(MemoryRegion *mr)
-{
-    FlatView *view;
-    /*mR是system_memory*/
-    view = g_new(FlatView, 1);
-    flatview_init(view);
-    /*addrrange_make生成一个0-2^64的地址空间*/
-    if (mr) {
-        /*最初是让MR 按照基址为0映射到地址空间中*/
-        render_memory_region(view, mr, int128_zero(),
-                             addrrange_make(int128_zero(), int128_2_64()), false);
-    }
-    flatview_simplify(view);
-
-    return view;
-}
-```
-
-首先申请一个FlatView结构，并对其进行初始化，然后调用render_memory_region函数实现核心功能，最后还调用flatview_simplify尝试合并相邻的FlatRange.static void render_memory_region(FlatView *view,MemoryRegion *mr,Int128 base,AddrRange clip,bool readonly)是一个递归函数，参数中，view表示当前FlatView,mr最初为system_memory即全局的MR，base起初为0表示从地址空间的其实开始，clip最初为一个完整的地址空间。readonly标识是否只读。
-
-```cpp
-static void render_memory_region(FlatView *view,
-                                 MemoryRegion *mr,
-                                 Int128 base,
-                                 AddrRange clip,
-                                 bool readonly)
-{
-    MemoryRegion *subregion;
-    unsigned i;
-    hwaddr offset_in_region;
-    Int128 remain;
-    Int128 now;
-    FlatRange fr;
-    AddrRange tmp;
-
-    if (!mr->enabled) {
-        return;
-    }
-
-    int128_addto(&base, int128_make64(mr->addr));
-    readonly |= mr->readonly;
-    /*获得当前MR的地址区间范围*/
-    tmp = addrrange_make(base, mr->size);
-    /*判断目标MR和clip是否有交叉，即MR应该落在clip的范围内*/
-    if (!addrrange_intersects(tmp, clip)) {
-        return;
-    }
-    /*缩小clip到交叉的部分*/
-    clip = addrrange_intersection(tmp, clip);
-    /*子区域才有alias字段*/
-    if (mr->alias) {
-        int128_subfrom(&base, int128_make64(mr->alias->addr));
-        int128_subfrom(&base, int128_make64(mr->alias_offset));
-        /*这里base应该为subregion对应的alias中的区间基址*/
-        render_memory_region(view, mr->alias, base, clip, readonly);
-        return;
-    }
-
-    /* Render subregions in priority order. */
-    QTAILQ_FOREACH(subregion, &mr->subregions, subregions_link) {
-        render_memory_region(view, subregion, base, clip, readonly);
-    }
-
-    if (!mr->terminates) {
-        return;
-    }
-    /*offset_in_region is distance between clip.start and base */
-    /*clip.start表示地址区间的起始，base为本次映射的基址，差值就为offset*/
-    offset_in_region = int128_get64(int128_sub(clip.start, base));
-    /***开始映射时，clip表示映射的区间范围，base作为一个移动指导每个FR的映射，remain表示clip总还没映射的大小*/
-    /*最初base=clip.start  */
-    base = clip.start;
-    remain = clip.size;
-    
-    fr.mr = mr;
-    fr.dirty_log_mask = mr->dirty_log_mask;
-    fr.romd_mode = mr->romd_mode;
-    fr.readonly = readonly;
-
-    /* Render the region itself into any gaps left by the current view. */
-    for (i = 0; i < view->nr && int128_nz(remain); ++i) {
-        /*if base > addrrange_end(view->ranges[i].addr)即大于一个range的end*/
-        if (int128_ge(base, addrrange_end(view->ranges[i].addr))) {
-            continue;
-        }
-        /*如果base < = view->ranges[i].addr.start*/
-        /*now 表示已经存在的FR 或者本次填充的FR的长度*/
-        if (int128_lt(base, view->ranges[i].addr.start)) {
-            now = int128_min(remain,
-                             int128_sub(view->ranges[i].addr.start, base));
-            /*fr.offset_in_region表示在整个地址空间中的偏移*/
-            fr.offset_in_region = offset_in_region;
-            fr.addr = addrrange_make(base, now);
-            flatview_insert(view, i, &fr);
-            ++i;
-            int128_addto(&base, now);
-            offset_in_region += int128_get64(now);
-            int128_subfrom(&remain, now);
-        }
-        /*if base > rang[i].start,means overlap exists,need escape*/
-        now = int128_sub(int128_min(int128_add(base, remain),
-                                    addrrange_end(view->ranges[i].addr)),
-                         base);
-        int128_addto(&base, now);
-        offset_in_region += int128_get64(now);
-        int128_subfrom(&remain, now);
-    }
-    /*如果还有剩下的clip没有映射，则下面不会在发生冲突，直接一次性的映射完成*/
-    if (int128_nz(remain)) {
-        fr.offset_in_region = offset_in_region;
-        fr.addr = addrrange_make(base, remain);
-        flatview_insert(view, i, &fr);
-    }
-}
-```
-
-在此必须清楚MR和clip的意义，即该函数实现的是把MR的区域填充clip空间。填充的方式就是生成一个个FlatRange，并交由FlatView管理。基本管理逻辑理论上如图所示
-
-![2020-02-28-23-26-43.png](./images/2020-02-28-23-26-43.png)
-
-棕色部分意味着已经存在的映射，这种情况下只需要把R1和R2映射进来即可。最终FlatView中的FlatRange按照在物理地址空间的布局，依次排列。但是按照实际情况来讲，实际上传递进来的MR是整个地址空间system_space,所以像图中那样比较复杂的格局应该基本不会出现。不过咱们还是根据代码来看。首先获取了当前MR的区间范围，以base为起点。我们目的是要把MR的区间映射进clip中，所以如果两者没有交叉，那么无法完成映射。接着设置clip为二者地址区间重叠的部分，以图中所示，clip就成了clip1所标的范围。如果当前MR是某个subregion,则需要对其原始的MR进行展开，因为具体的信息都保存在原始的MR中。但是全局MR system_memory作为参数传递进来，那么这里mr->alias为NULL，所以到了下面对system_memory的每个subregion均进行展开。就这样再次进入render_memory_region函数的时候，MR为某个subregion，clip也为subregion对应的区域和原始clip的交集，由于其mr->alias指向原始MR，进入if判断，对原始MR的对应区间进行展开，再次调用render_memory_region。这一次就要进行真正的展开操作了，即生成对应的FlatRange。
 
 顺着函数往下走，涉及几个变量这里先介绍下，offset_in_region为对应MR在全局地址空间中的偏移，base为一个移动指针，指向当前映射的小区间，指导每个FR的映射。now当前已经映射的FR的长度，有两种可能，第一可能是当前映射的FR，第二可能是已经映射的FR。remain表示当前clip中剩下的未映射的部分（不考虑已经存在的FR），有了这些再看下面的代码就不吃力了。
 
