--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -913,6 +913,14 @@ static void render_memory_region(FlatView *view,
 
 棕色部分意味着已经存在的映射，这种情况下只需要把R1和R2映射进来即可。最终FlatView中的FlatRange按照在物理地址空间的布局，依次排列。但是按照实际情况来讲，实际上传递进来的MR是整个地址空间system_space,所以像图中那样比较复杂的格局应该基本不会出现。不过咱们还是根据代码来看。首先获取了当前MR的区间范围，以base为起点。我们目的是要把MR的区间映射进clip中，所以如果两者没有交叉，那么无法完成映射。接着设置clip为二者地址区间重叠的部分，以图中所示，clip就成了clip1所标的范围。如果当前MR是某个subregion,则需要对其原始的MR进行展开，因为具体的信息都保存在原始的MR中。但是全局MR system_memory作为参数传递进来，那么这里mr->alias为NULL，所以到了下面对system_memory的每个subregion均进行展开。就这样再次进入render_memory_region函数的时候，MR为某个subregion，clip也为subregion对应的区域和原始clip的交集，由于其mr->alias指向原始MR，进入if判断，对原始MR的对应区间进行展开，再次调用render_memory_region。这一次就要进行真正的展开操作了，即生成对应的FlatRange。
 
+顺着函数往下走，涉及几个变量这里先介绍下，offset_in_region为对应MR在全局地址空间中的偏移，base为一个移动指针，指向当前映射的小区间，指导每个FR的映射。now当前已经映射的FR的长度，有两种可能，第一可能是当前映射的FR，第二可能是已经映射的FR。remain表示当前clip中剩下的未映射的部分（不考虑已经存在的FR），有了这些再看下面的代码就不吃力了。
+
+核心的工作起始于一个for循环，循环的条件是 view->nr && int128_nz(remain)，表示当前还有未遍历的FR并且remain还有剩余。循环中如果MR base的值大于或者等于当前FR的end,则继续往后遍历FR，否则进入下面，如果base小于当前FR的start，则表明base到start之间的区间还没有映射，则为其进行映射，now表示要映射的长度，取remain和int128_sub(view->ranges[i].addr.start, base)之间的最小值，后者表示下一个FR的start和base之间的差值，当然按照clip为准。接下来就没难度了，设置FR的offset_in_region和addr,然后调用flatview_insert插入到FlatView的FlatRange数组中。不过由于FR按照地址顺序排列，如果插入位置靠前，则需要移动较多的项，不知道为何不用链表实现。下面就很自然了移动base，增加offset_in_region，减少remain等操作。出了if,此时base已经和FR的start对齐，所以还需要略过当前FR。就这么一直映射下去。
+
+出了for循环，如果remain不为0，则表明还有没有映射的，但是现在已经没有已经存在的FR了，所以不会发生冲突，直接把remain直接映射成一个FR即可。
+
+按照这个思路，吧所有的subregion都映射下去，最终把FlatView返回。
+
 qemu要把**MemoryRegion**映射到cpu看到的**线性地址上**(**AddressSpace**), 但是有些情况**两个设备**的内存映射到**相同的线性地址**, 比如mmio. 举个例子,对于一个**内存条是4g**, 它的线性地址为**0-4g**, 但是**vga设备**的内存地址通过**mmio映射**到**线性地址**的`768k–(768+256k)`, 这种情况应该使vga的线性地址覆盖掉ram的`768k–(768+256k)`地址,这样写vga地址才能成功.
 
 **FlatRang**则表示一个MemoryRegion映射到线性空间的一段地址.
@@ -940,7 +948,6 @@ for循环中处理的就是图中的1, 2, 4.
 先把base到 min(remin, start) 这段地址生成一个FlatRange(不和其他地址重合)
 
 将剩余部分地址裁剪出来, 其实还有一部分FlatRange可能要生成新的FlatRange(end到remin)
-
 
 #### 3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM
 
@@ -1003,25 +1010,6 @@ static void address_space_set_flatview(AddressSpace *as)
 在获取了**新旧两个FlatView**之后，调用了**两次**`address_space_update_topology_pass()`函数，首次调用重在**删除原来的**，而后者重在**添加**。之后设置`as->current_map = new_view`。并对`old_view`**减少引用**，当**引用计数为1**时会**被删除**。
 
 接下来重点在两个地方：1、如何根据一个MR获取对应的FlatView；2、如何对旧的FlatView进行更新。
-
-
-
-会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**
-
-
-
-
-
-
-
-
-顺着函数往下走，涉及几个变量这里先介绍下，offset_in_region为对应MR在全局地址空间中的偏移，base为一个移动指针，指向当前映射的小区间，指导每个FR的映射。now当前已经映射的FR的长度，有两种可能，第一可能是当前映射的FR，第二可能是已经映射的FR。remain表示当前clip中剩下的未映射的部分（不考虑已经存在的FR），有了这些再看下面的代码就不吃力了。
-
-核心的工作起始于一个for循环，循环的条件是 view->nr && int128_nz(remain)，表示当前还有未遍历的FR并且remain还有剩余。循环中如果MR base的值大于或者等于当前FR的end,则继续往后遍历FR，否则进入下面，如果base小于当前FR的start，则表明base到start之间的区间还没有映射，则为其进行映射，now表示要映射的长度，取remain和int128_sub(view->ranges[i].addr.start, base)之间的最小值，后者表示下一个FR的start和base之间的差值，当然按照clip为准。接下来就没难度了，设置FR的offset_in_region和addr,然后调用flatview_insert插入到FlatView的FlatRange数组中。不过由于FR按照地址顺序排列，如果插入位置靠前，则需要移动较多的项，不知道为何不用链表实现。下面就很自然了移动base，增加offset_in_region，减少remain等操作。出了if,此时base已经和FR的start对齐，所以还需要略过当前FR。就这么一直映射下去。
-
-出了for循环，如果remain不为0，则表明还有没有映射的，但是现在已经没有已经存在的FR了，所以不会发生冲突，直接把remain直接映射成一个FR即可。
-
-按照这个思路，吧所有的subregion都映射下去，最终把FlatView返回。这样generate_memory_topology就算是介绍完了，下面的flatview_simplify是对数组表项的尝试合并，这里就不再介绍。到此为止，已经针对当前MR生成了一个新的FlatView，接下来需要用address_space_update_topology_pass函数对old_view和new_view做对比。连续调用了两次这个函数，不过最后的adding参数先后为false和true。进入函数分析下
 
 ```cpp
 static void address_space_update_topology_pass(AddressSpace *as,
@@ -1098,6 +1086,9 @@ static void address_space_update_topology_pass(AddressSpace *as,
 3、frold为空但是frnew不为空      这种情况直接调用region_add回调函数添加region。
 
 函数主体逻辑基本如上所述，那我们注意到，当adding为false时，执行的只有第一个情况下的处理，就是删除frold的操作，其余的处理只有在adding 为true的时候才得以执行。这意图就比较明确，首次执行先删除多余的，下次直接添加或者对日志做更新操作了。
+
+
+会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**
 
 # 5. 新FlatRange的更新
 
