--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -16,10 +16,10 @@
     - [4.2.2. 从pc.ram中划分并加入system_memory的subregion](#422-从pcram中划分并加入system_memory的subregion)
       - [4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存](#4221-memory_region_init_alias-初始化alias的mr-不申请内存)
       - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory(不是pc.ram)](#4222-memory_region_add_subregion-subregion注册到全局的system_memory不是pcram)
-  - [提交修改: memory_region_transaction_commit()](#提交修改-memory_region_transaction_commit)
-    - [3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互](#311-address_space_update_topology-设置拓扑flatview-会与kvm交互)
-      - [3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#3111-generate_memory_topologymr-根据给定的mr生成新的flatview)
-      - [3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#3112-address_space_set_flatview-设置as的flatview-会调用kvm)
+  - [4.3. 提交修改: memory_region_transaction_commit()](#43-提交修改-memory_region_transaction_commit)
+    - [4.3.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互](#431-address_space_update_topology-设置拓扑flatview-会与kvm交互)
+      - [4.3.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#4311-generate_memory_topologymr-根据给定的mr生成新的flatview)
+      - [4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#4312-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
 - [6. 参考](#6-参考)
 
@@ -666,7 +666,7 @@ done:
 
 目前我们添加了区域，**地址空间已经发生变化**，自然要把变化和KVM进行同步，这一工作由`memory_region_transaction_commit()`实现。
 
-## 提交修改: memory_region_transaction_commit()
+## 4.3. 提交修改: memory_region_transaction_commit()
 
 ```cpp
 void memory_region_transaction_commit(void)
@@ -692,7 +692,7 @@ void memory_region_transaction_commit(void)
 
 对于**每个address_space！！！**，调用`address_space_update_topology()`执行更新。
 
-### 3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互
+### 4.3.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互
 
 这个在`address_space_init()`时候也会调用, 当`address_space_memory`调用时, mr就是`system_memory`
 
@@ -715,7 +715,7 @@ static void address_space_update_topology(AddressSpace *as)
 
 前者对于**一个给定的MR**，生成其**对应的FlatView**，而后者则根据**oldview**和**newview**对当前视图进行更新。
 
-#### 3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview
+#### 4.3.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview
 
 ```cpp
 /* Render a memory topology into a list of disjoint absolute ranges. */
@@ -949,7 +949,7 @@ for循环中处理的就是图中的1, 2, 4.
 
 将剩余部分地址裁剪出来, 其实还有一部分FlatRange可能要生成新的FlatRange(end到remin)
 
-#### 3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM
+#### 4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM
 
 ```cpp
 static void address_space_set_flatview(AddressSpace *as)
@@ -1151,7 +1151,7 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
 
 这里有个`_direction`，其实就是**遍历方向**，因为**listener**按照**优先级**从**低到高**排列，所以这里其实就是确定让谁先处理。Forward就是从前向后，而reverse就是从后向前。还有一个值得注意的是`memory_listener_match`函数，**listener**有着**对应的AddressSpace**，会在其 `address_space_filter` 域指定，注意如果**没有指定AddressSpace**，那么该listener对**所有AddressSpace均适用**，否则**只适用于其指定的AddressSpace**。知道这些，看这些代码就不成问题了。
 
-这样`kvm_region_add()`函数得到执行，那咱们就从`kvm_region_add`函数开始，对KVM部分的内存管理做介绍。kvm_region_add()函数是核心listener的添加region的函数，在qemu申请好内存后，针对每个FR，调用了listener的region_add函数。最终需要利用此函数把region信息告知KVM，KVM以此对内存信息做记录。咱们直奔主题，函数核心在static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)函数中，
+这样`kvm_region_add()`函数得到执行，那咱们就从`kvm_region_add`函数开始，对KVM部分的内存管理做介绍。`kvm_region_add()`函数是核心listener的添加region的函数，在qemu申请好内存后，针对每个FR，调用了listener的`region_add函数`。最终需要利用此函数把region信息告知KVM，KVM以此对内存信息做记录。咱们直奔主题，函数核心在static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)函数中，
 
 该函数比较长，咱们还是分段介绍
 
